common api done
